--- a/template/style.css
+++ b/template/style.css
@@ -51,3 +51,50 @@ body {
   justify-content: center; /* this two lines for center */
   align-items: center;
 }
+a {
+  text-decoration: none;
+}
+a:hover {
+  color: #ff8000; /* tso we dont neew .header-links a:hover */
+}
+
+/* Home Screen */
+.products {
+  display: flex; /* These two lines will be responsive and no need to media*/
+  flex-wrap: wrap; /*very important remove scrolbar and wrap cards to be responsive*/
+  justify-content: center;
+  align-items: center;
+}
+.products li {
+  list-style-type: none;
+  padding: 0;
+  flex: 0 1 34rem; /* check again in documentation flex property */
+  margin: 1rem;
+  height: 50rem;
+  border-bottom: 0.1rem #c0c0c0 solid; /* Here image is big so change to 34rem 34 rem later*/
+}
+.product {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.product-name {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.product-brand {
+  font-size: 1.2rem;
+  color: #808080;
+}
+.product-price {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.product-image {
+  max-width: 34rem;
+  max-height: 34rem;
+}
+.product-rating {
+  margin-bottom: 1rem;
+}
