--- a/template/style.css
+++ b/template/style.css
@@ -98,3 +98,42 @@ a:hover {
 .product-rating {
   margin-bottom: 1rem;
 }
+
+/* Sidebar */
+
+.brand button {
+  /* this is for hamburger menu*/
+  font-size: 3rem;
+  padding: 0.5rem;
+  background: none;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+}
+.sidebar {
+  position: fixed;
+  /* with these two lines keep sidebar out of the ascreen */
+  transform: translateX(-30rem);
+  width: 30rem;
+  background-color: #f0f0f0;
+  height: 100%; /* full width */
+}
+.sidebar.open {
+  /* we add or remove this class for open or close menu this class is later and in prior */
+  transform: translateX(0);
+}
+
+.sidebar-close-button {
+  border-radius: 50%;
+  border: 0.1rem #000000 solid;
+  width: 3rem;
+  height: 3rem;
+  padding: 0.5rem;
+  font-size: 2rem;
+  padding-top: 0; /* this code is for moving x to center of circle */
+  cursor: pointer;
+  /* these codes are to change position to right */
+  position: absolute;
+  right: 0.5rem;
+  top: 1.5rem;
+}
